# Matlab_client_test

./: README.md
install/: local_setup.sh  setup.sh
install/test1_msgs/include/test1_msgs/msg/: rosidl_generator_c__visibility_control.h
install/test1_msgs/include/test1_msgs/msg/detail/: test__functions.c  test__rosidl_typesupport_fastrtps_cpp.hpp  test__traits.hpp
install/test1_msgs/include/test1_msgs/srv/detail/: find_norm__struct.h  find_norm__traits.hpp  find_norm__type_support.cpp  find_norm__type_support.h
install/test1_msgs/share/test1_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
install/test1_msgs/share/test1_msgs/cmake/: test1_msgs__rosidl_generator_cppExport.cmake  test1_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  test1_msgs__rosidl_typesupport_introspection_cExport.cmake
install/test1_msgs/share/test1_msgs/msg/: Test.idl
install/test1_msgs/share/test1_msgs/srv/: FindNorm_Response.msg
install/test_srvcli/lib/test_srvcli/: client  server
install/test_srvcli/share/test_srvcli/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/test1_msgs/: CMakeLists.txt
src/test_matlab/: test_client.m
src/test_matlab/custom/matlab_msg_gen/glnxa64/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/test_matlab/custom/matlab_msg_gen/glnxa64/install/include/test1_msgs/: visibility_control.h
src/test_matlab/custom/matlab_msg_gen/glnxa64/install/include/test1_msgs/msg/: test.hpp
src/test_matlab/custom/matlab_msg_gen/glnxa64/install/include/test1_msgs/msg/detail/: test__builder.hpp  test__functions.c  test__functions.h  test__rosidl_typesupport_introspection_c.h
src/test_matlab/custom/matlab_msg_gen/glnxa64/install/include/test1_msgs/srv/: find_norm.hpp
src/test_matlab/custom/matlab_msg_gen/glnxa64/install/include/test1_msgs/srv/detail/: find_norm__functions.h  find_norm__traits.hpp
src/test_matlab/custom/matlab_msg_gen/glnxa64/install/m/+ros/+internal/+ros2/+custommessages/+test1_msgs/: test.m
src/test_matlab/custom/matlab_msg_gen/glnxa64/install/share/test1_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/test_matlab/custom/matlab_msg_gen/glnxa64/install/share/test1_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  test1_msgsConfig.cmake  test1_msgs__rosidl_generator_cExport.cmake  test1_msgs__rosidl_typesupport_cppExport.cmake
src/test_matlab/custom/matlab_msg_gen/glnxa64/log/: latest_build
src/test_matlab/custom/matlab_msg_gen/glnxa64/src/: VersionInfo.mat
src/test_matlab/custom/matlab_msg_gen/glnxa64/src/test1_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
src/test_matlab/custom/matlab_msg_gen/glnxa64/src/test1_msgs/m/+ros/+internal/+ros2/+custommessages/+test1_msgs/: findNormRequest.m  findNormResponse.m  test1_msgs_msg_Test_1To2_Converter.m  test1_msgs_msg_Test_2To1_Converter.m
src/test_matlab/custom/matlab_msg_gen/glnxa64/src/test1_msgs/src/: test1_msgs_FindNorm_service.cpp  test1_msgs_Test_message.cpp
src/test_matlab/custom/test1_msgs/srv/: FindNorm.srv
src/test_srvcli/: package.xml  setup.cfg  setup.py
src/test_srvcli/test_srvcli/: client.py  srvcli_member_function.py
